# litewq

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/model/cube/: cube.mtl
assets/shader/bling-phong/: frag.glsl  lighting_map_frag.glsl  lighting_map_vertex.glsl  vertex.glsl
assets/shader/shadow/: shadowmap_frag.glsl  shadowmap_vertex.glsl
assets/shader/simple/: frag.glsl  opaque_frag.glsl  scent_frag.glsl
assets/shader/skybox/: frag.glsl  vertex.glsl
assets/shader/ssao/: blur_frag.glsl  geom_frag.glsl  geom_vertex.glsl  lighting_frag.glsl  ssao_frag.glsl  ssao_vertex.glsl
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake
doc/: final.md  proposal.md  proposal.tex
include/glad/: glad.h
include/litewq/camera/: Scene.h  camera.h
include/litewq/math/: BVH.h  BasicFunction.h  BoundingBox.h  Shape.h
include/litewq/mesh/: Material.h  Mesh.h  PhongMaterial.h  SkyBoxMesh.h  SkyBoxTexture.h  Texture.h  TriMesh.h
include/litewq/platform/OpenGL/: GLErrorHandle.h  GLShader.h
include/litewq/scent/: scent.h
include/litewq/surface/: Bezier.h  WavefrontOBJ.h
include/litewq/utils/: Context.h  Loader.h  config.h.in  logging.h
source/: CMakeLists.txt  main.cpp
source/camera/: Scene.cpp  camera.cpp
source/math/: BVH.cpp  Shape.cpp
source/mesh/: Material.cpp  Mesh.cpp  PhongMaterial.cpp  SkyBoxMesh.cpp  SkyBoxTexture.cpp  Texture.cpp  TriMesh.cpp
source/platform/OpenGL/: GLShader.cpp  glad.c
source/scent/: scent.cpp
source/surface/: Bezier.cpp  WavefrontOBJ.cpp
source/utils/: Loader.cpp
